@@ -3,10 +3,14 @@ In progress - pre-release
           kron()     - Kronecker product with another quantum circuit
                        description
           measureZ() - new overload that allows multiple targets at once
+    - Implemented QCircuit qpp::adjoint(const QCircuit&) for computing the
+      adjoint of a given quantum circuit description
     - API change qpp::QCircuit::get_gate_depth() to qpp::QCircuit::get_depth(),
       so now measurements are taken into account when computing depths
     - Added "classes/circuits/layouts.h" header file for dealing with different
-      physical qudit layouts
+      physical qudit layouts, including:
+          qpp::GridView   - Qudits on an orthogonal grid
+          qpp::GridView3D - Qudits on a 3D orthogonal lattice
 
 Version 1.3 - 25 July 2019
     - Minimum required CMake version is now 3.2
